0.0.4 fixed extra spaces between the rooms

--- a/src/app/components/dashboard/dashboard.css
+++ b/src/app/components/dashboard/dashboard.css
@@ -6,7 +6,7 @@
 
 .rooms-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
     width: 70%;
 }
