--- a/src/app/components/navbar/navBar.css
+++ b/src/app/components/navbar/navBar.css
@@ -1,5 +1,6 @@
 .nav-bar {
     background-color: bisque;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
 }
