--- a/src/app/components/room/room.css
+++ b/src/app/components/room/room.css
@@ -1,3 +1,5 @@
 .rom {
-    width: 250px;
+    width: calc(25% - 10px);
+    height: calc(25% - 10px);
+    margin: 5px;
 }
